<resources>
    <string name="app_name">Horoscopo</string>
    <string name="txtApell1">Apellido Paterno</string>
    <string name="txtApell2">Apellido Materno</string>
    <string name="txtFecha">Fecha de nacimiento</string>
    <string name="txtwlc">Bienvenido</string>
    <string name="txtInstr">Introduce tus datos:</string>
    <string name="txtbtn">Toca el boton para descubir</string>
    <string name="validacion1">Por favor ingrese todos los datos correctamente</string>
    <string name="Reqer">Obligatorio</string>
    <string name="todo">TODO</string>
    <string name="txtNom">Primer Nombre</string>
    <string name="txtcorto">Muy corto</string>
    <string name="capri">Capricornio</string>
    <string name="concapr1">Tu paciencia se verá recompensada</string>
    <string name="concapr2">No importa lo que haya sucedido, ahora sabrás resolverlo todo.</string>
    <string name="Acuario">Acuario</string>
    <string name="acucon1">Tu regente en tauro te ayuda a ser más concreto</string>
    <string name="acucon2">Descubrirás el amor y la amistad en lugares inusitados.</string>
    <string name="Piscis">Piscis</string>
    <string name="piccon1">Tus inquietudes sentimentales llegan a su fin</string>
    <string name="piccon2">Te sientes más seguro de ti mismo, con mayor auto confianza.</string>
    <string name="Aries">Aries</string>
    <string name="aricon1">Una ilusión que se materializa</string>
    <string name="aricon2">Tus sueños empiezan a convertirse en hermosa realidad.</string>
    <string name="Tauro">Tauro</string>
    <string name="taucon1">La luna en tu elemento tierra amplía tu mundo interior</string>
    <string name="taucon2">Lo que te parecía lejano ahora está más cerca que antes.</string>
    <string name="Geminis">Géminis</string>
    <string name="gemcon1">Escenarios sentimentales inesperados</string>
    <string name="gemcon2">Un regalo que no esperabas recibir en estos momentos.</string>
    <string name="Cancer">Cáncer</string>
    <string name="cancon1">Actúa ahora mismo, es tu día zodiacal</string>
    <string name="cancon2">No sigas esperando por los demás para alcanzar tu felicidad.</string>
    <string name="Leo">Leo</string>
    <string name="leocon1">Canalizarás adecuadamente tus emociones</string>
    <string name="leocon2">La luna te ayuda a tener más aplomo y serenidad.</string>
    <string name="Virgo">Virgo</string>
    <string name="vircon1">Descubres un mundo nuevo dentro de ti mismo</string>
    <string name="vircon2">Se abre un canal de comunicación que será muy importante.</string>
    <string name="Libra">Libra</string>
    <string name="libcon1">Tu personalidad brillará como nunca antes</string>
    <string name="libcon2">Se avecina algo diferente, excitante.</string>
    <string name="Escorpion">Escorpión</string>
    <string name="esccon1">Un despertar dentro de tu mundo interior</string>
    <string name="esccon2">Terminarás felizmente algo que te tenía muy preocupado.</string>
    <string name="Sagitario">Sagitario</string>
    <string name="sagcon1">Ideas novedosas que te darán resultados</string>
    <string name="sagcon2">Estás alerta y muy avispado lo cual es formidable para ti.</string>
    <string name="Mono">Mono</string>
    <string name="moncar">Ingenioso, inteligente, ambicioso, y aventurero</string>
    <string name="Gallo">Gallo</string>
    <string name="galcar">Observador, trabajoso, ingenioso, valiente, y talentoso</string>
    <string name="Perro">Perro</string>
    <string name="percar">Leal, honesto, amable, cauteloso, y prudente</string>
    <string name="Cerdo">Cerdo</string>
    <string name="cercar">Diligente, compasivo, generoso, tranquilo y amable</string>
    <string name="Rata">Rata</string>
    <string name="ratcar">Rápido, ingenioso, y versátil</string>
    <string name="Buey">Buey</string>
    <string name="buecar">Decisivo, honesto, confiable, y trabajoso</string>
    <string name="Conejo">Conejo</string>
    <string name="concar">Suave, tranquilo, elegante, y alerto; rápido, hábil, amable, y paciente</string>
    <string name="Dragon">Dragón</string>
    <string name="dracar">Confiable, inteligente, ambicioso, perseverante, y trabajoso</string>
    <string name="Serpiente">Serpiente</string>
    <string name="sercar">Inteligente, valiente, confiable, perspicaz, y comunicativo</string>
    <string name="Caballo">Caballo</string>
    <string name="cabcar">Animado, amable, directo, activo, y enérgico</string>
    <string name="Cabra">Cabra</string>
    <string name="cabracar">Suave, tímido, estable, comprensivo, y amistoso</string>
    <string name="Tigre">Tigre</string>
    <string name="tigcar">Bravo, competitivo, impredecible, y seguro de sí mismo</string>
    <string name="saludo">\Hola \</string>
    <string name="rfc">\Tu RFC es \</string>
    <string name="yt">\ y tienes \</string>
    <string name="jov">\ años eres jóven!!!</string>
    <string name="hor">\Tu Horóscopo es \</string>
    <string name="tvchino1">\Tu signo del zodiaco chino es el \</string>
    <string name="tvhoros12">\ y hoy tu suerte dice: \</string>
    <string name="tvchino2">\Tu signo se caracteriza por ser: \</string>
</resources>
